--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -78,12 +78,14 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="DetailCamera",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
-+ActionMappings=(ActionName="Zoom In",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollUp)
-+ActionMappings=(ActionName="Zoom Out",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollDown)
-+ActionMappings=(ActionName="Click",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
-+AxisMappings=(AxisName="RotateHoz",Scale=1.000000,Key=MouseX)
-+AxisMappings=(AxisName="RotateVert",Scale=1.000000,Key=MouseY)
++ActionMappings=(ActionName="CameraDetailUnit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
++ActionMappings=(ActionName="CameraRotate",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MiddleMouseButton)
++AxisMappings=(AxisName="CameraMoveHoz",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="CameraMoveHoz",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="CameraMoveVert",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="CameraMoveVert",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="CameraZoom",Scale=-1.000000,Key=MouseWheelAxis)
++AxisMappings=(AxisName="CameraTurn",Scale=1.000000,Key=MouseX)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
