Основная логика перемещения камеры

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -80,12 +80,13 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="CameraDetailUnit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
 +ActionMappings=(ActionName="CameraRotate",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MiddleMouseButton)
-+AxisMappings=(AxisName="CameraMoveHoz",Scale=1.000000,Key=D)
-+AxisMappings=(AxisName="CameraMoveHoz",Scale=-1.000000,Key=A)
-+AxisMappings=(AxisName="CameraMoveVert",Scale=1.000000,Key=W)
-+AxisMappings=(AxisName="CameraMoveVert",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="CameraMoveHorizontal",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="CameraMoveHorizontal",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="CameraMoveVertical",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="CameraMoveVertical",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="CameraZoom",Scale=-1.000000,Key=MouseWheelAxis)
-+AxisMappings=(AxisName="CameraTurn",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="CameraTurnX",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="CameraTurnY",Scale=-1.000000,Key=MouseY)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
