--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Level/CurrentLevel.CurrentLevel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Level/GM_SurvivalChaos.GM_SurvivalChaos_C
+GlobalDefaultGameMode=/Game/Blueprints/Core/Player/SC_BPGameModeBase.SC_BPGameModeBase_C
 GlobalDefaultServerGameMode=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
